--- a/Chroma/Chroma.csproj
+++ b/Chroma/Chroma.csproj
@@ -33,6 +33,7 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="HarmonyPatches\SaberBurnMarkArea.cs" />
     <Compile Include="VFX\MayhemEvent.cs" />
     <Compile Include="Beatmap\ChromaMapModifier.cs" />
     <Compile Include="Beatmap\CustomBeatmap.cs" />
