--- a/Chroma/manifest.json
+++ b/Chroma/manifest.json
@@ -9,8 +9,7 @@
   "dependsOn": {
     "BeatSaberMarkupLanguage": "^1.1.3",
     "BS Utils": "^1.3.0",
-    "CustomJSONData": "^0.0.4",
-    "CustomEvents": "^0.0.4"
+    "CustomJSONData": "^0.1.0"
   },
   "features": []
 }
