Hope it makes you happy

--- a/Chroma/Chroma.csproj
+++ b/Chroma/Chroma.csproj
@@ -33,6 +33,7 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Events\ChromaLegacyRGBEvent.cs" />
     <Compile Include="Events\ChromaSaberColourEvent.cs" />
     <Compile Include="HarmonyPatches\SaberBurnMarkArea.cs" />
     <Compile Include="HarmonyPatches\StandardLevelScenesTransitionSetupDataSO.cs" />
