--- a/Chroma/Chroma.csproj
+++ b/Chroma/Chroma.csproj
@@ -36,6 +36,7 @@
     <Compile Include="Events\ChromaLegacyRGBEvent.cs" />
     <Compile Include="HarmonyPatches\SaberBurnMarkArea.cs" />
     <Compile Include="HarmonyPatches\StandardLevelScenesTransitionSetupDataSO.cs" />
+    <Compile Include="Utils\Easings.cs" />
     <Compile Include="VFX\MayhemEvent.cs" />
     <Compile Include="Events\ChromaBombColourEvent.cs" />
     <Compile Include="Events\ChromaGradientEvent.cs" />
