--- a/Chroma/manifest.json
+++ b/Chroma/manifest.json
@@ -1,15 +1,15 @@
 ﻿{
   "$schema": "./Schema.json",
-  "author": "SkyKiwi",
-  "description": "RGB Lightmapping, custom colours, and rainbow modes",
-  "gameVersion": "1.7.0",
+  "author": "Aeroluna",
+  "description": "RGB Lightmapping, custom lighting events, and rainbow modes",
+  "gameVersion": "1.8.0",
   "id": "Chroma",
   "name": "Chroma",
-  "version": "1.4.0",
+  "version": "2.0.0",
   "dependsOn": {
-    "BeatSaberMarkupLanguage": "^1.1.3",
-    "BS Utils": "^1.3.0",
-    "CustomJSONData": "^0.1.0"
+    "BeatSaberMarkupLanguage": "^1.2.2",
+    "BS Utils": "^1.4.7",
+    "CustomJSONData": "^0.1.2"
   },
   "features": []
 }
