--- a/Chroma/manifest.json
+++ b/Chroma/manifest.json
@@ -5,9 +5,10 @@
   "gameVersion": "1.10.0",
   "id": "Chroma",
   "name": "Chroma",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "dependsOn": {
     "BeatSaberMarkupLanguage": "^1.2.2",
+    "BS Utils": "^1.4.7",
     "CustomJSONData": "^1.0.0"
   }
 }
