--- a/Chroma/Chroma.csproj
+++ b/Chroma/Chroma.csproj
@@ -32,22 +32,20 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
+    <CodeAnalysisRuleSet>..\..\NoodleExtensions\NoodleExtensions\NoodleExtensions.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="AnimationHelper.cs" />
     <Compile Include="Events\ChromaLegacyRGBEvent.cs" />
-    <Compile Include="HarmonyPatches\BeatmapObjectManager.cs" />
     <Compile Include="HarmonyPatches\BeatEffectSpawner.cs" />
     <Compile Include="HarmonyPatches\SaberBurnMarkArea.cs" />
     <Compile Include="HarmonyPatches\StandardLevelScenesTransitionSetupDataSO.cs" />
     <Compile Include="Utils\Easings.cs" />
     <Compile Include="Events\ChromaGradientEvent.cs" />
-    <Compile Include="Events\ChromaNoteColorEvent.cs" />
-    <Compile Include="ChromaBehaviour.cs" />
+    <Compile Include="ChromaController.cs" />
     <Compile Include="Extensions\LightSwitchEventEffectExtensions.cs" />
     <Compile Include="Extensions\SaberColorizer.cs" />
     <Compile Include="HarmonyPatches\ColorNoteVisuals.cs" />
-    <Compile Include="HarmonyPatches\NoteDebrisSpawner.cs" />
     <Compile Include="HarmonyPatches\ObstacleController.cs" />
     <Compile Include="HarmonyPatches\LightPairRotationEventEffect.cs" />
     <Compile Include="HarmonyPatches\ParticleSystemEventEffect.cs" />
@@ -62,7 +60,7 @@
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ChromaLogger.cs" />
-    <Compile Include="ChromaColorManager.cs" />
+    <Compile Include="NoteColorManager.cs" />
     <Compile Include="Utils\ChromaUtils.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -130,6 +128,7 @@
     <Analyzer Include="..\packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
     <Analyzer Include="..\packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>copy "$(TargetPath)" "C:\Program Files (x86)\Steam\steamapps\common\Beat Saber\Plugins\Chroma.dll"</PostBuildEvent>
